@@ -5,7 +5,12 @@ CHANGES
 1.2.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Tests now require ``zope.browserpage >= 3.12`` instead of
+  ``zope.app.pagetemplate`` as the expression type registration has
+  been moved there recently.
+
+- No longer using deprecated ``zope.testing.doctestunit`` but built-in
+  ``doctest`` instead.
 
 
 1.2.1 (2009-03-07)
